--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="game-container">
         <header class="game-header">
-            <h1 class="glitch">PLAYER 1: DEEPAN</h1>
+            <h1 class="glitch">PLAYER 1: DEEPAN BOMB</h1>
             <nav class="game-nav">
                 <ul>
                     <li><a href="#about">ABOUT</a></li>
@@ -70,7 +70,7 @@
         </main>
 
         <footer class="game-footer">
-            <p>© 2024 DEEPAN | PRESS START TO CONNECT</p>
+            <p>© 2024 DEEPAN BOMB | PRESS START TO CONNECT</p>
         </footer>
     </div>
     <script src="script.js"></script>
